# PiCopter

./: CMakeLists.txt  PiCopter Manual.docx  Power Budget.xlsx  package.xml
Panda3D Files/: World_1 summary.html  World_1.def.xml  World_1.proj  World_1_DM.dmf  World_1_HF.hfz
Panda3D Files/MipMaps/HF/: Mip8.hfz
config/: ini_test.ini  ini_test_2.ini  mission.ini  mission_template.ini  simulation.ini
launch/: picopter.launch  picopter_sim.launch
msg/: Autopilot_msg.msg  Imu.msg  Motors.msg  Navigator_msg.msg  Sim_msg.msg
scripts/: PCA9685.py  SIM_3D_Viewer.py  SIM_GUI.py  VL53L1X.py  altitude_test.py  berryGPS.py  berryGPS_sim.py  bmp388.py  bmp3882.py  bmp388_sim.py
src/: AP_TEST.cpp  Controllers.cpp  Controllers.h  RazorAHRS.cpp  RazorAHRS.h  StandardAltitude.cpp  StandardAltitude.h  StandardPID.cpp  StandardPID.h  SuperTwistingSMC.cpp  SuperTwistingSMC.h  ahrs_node.cpp  ahrs_sim.cpp  ahrs_sim.h  ahrs_sim_node.cpp  autopilot.cpp  autopilot.h  autopilot_node.cpp  navigator.cpp  navigator.h  navigator_node.cpp  simulator.cpp  simulator.h  simulator_node.cpp
